Product image component added

--- a/src/app/dashboard/features/feature-details/feature-details.component.html
+++ b/src/app/dashboard/features/feature-details/feature-details.component.html
@@ -51,7 +51,7 @@
             </div>
             <!-- /.box-header -->
             <div class="box-body">
-              {{feature.longDescriptions}}
+              {{feature.longDescription}}
             </div>
             <!-- /.box-body -->
           </div>
