--- a/src/app/dashboard/features/feature-form/feature-form.component.html
+++ b/src/app/dashboard/features/feature-form/feature-form.component.html
@@ -145,7 +145,7 @@
             <div class="col-lg-6 col-md-6 col-xs-12">
               <div class="row">
                 <div class="col-lg-6 col-md-6 col-xs-12">
-                  <button type="button" class="btn btn-block btn-danger btn-lg">Cancel</button>
+                  <button type="button" class="btn btn-block btn-danger btn-lg" (click)="back()">Cancel</button>
                 </div>
                 <div class="col-lg-6 col-md-6 col-xs-12">
                   <button type="submit" [disabled]="featureForm.invalid" class="btn btn-block btn-primary btn-lg">
