--- a/src/app/dashboard/product-images/product-image-list/product-image-list.component.html
+++ b/src/app/dashboard/product-images/product-image-list/product-image-list.component.html
@@ -5,10 +5,10 @@
     <div class="box box-primary box-solid">
       <div class="box-header with-border">
         <h1 class="box-title">Product Images</h1>
-        <div class="box-tools pull-right">      
-          <button type="button" class="btn btn-social-icon btn-primary"(click)="addProductImage()">
+        <div class="box-tools pull-right">
+          <button type="button" class="btn btn-social-icon btn-primary" (click)="addProductImage()">
             <i class="fa fa-plus-square"></i>
-          </button>         
+          </button>
         </div>
       </div>
     </div>
@@ -16,9 +16,113 @@
 
   <!-- Main content -->
   <section class="content">
-    <!-- <div *ngFor="let feature of features | async" class="row">
-      <app-feature-details [feature]='feature'></app-feature-details>
-    </div> -->
+
+
+    <div class="box box-warning box-solid">
+      <div class="box-header with-border">
+        <h3 class="box-title">Filter</h3>
+        <div class="box-tools pull-right">
+        </div>
+      </div>
+      <!-- /.box-header -->
+      <div class="box-body">
+        <div class="row" style="vertical-align: middle">
+          <div class="col-lg-6 col-md-6 col-xs-12">
+            <div class="form-group has-feedback">
+              <label>Image tag</label>
+              <div class="input-group">
+                <div class="input-group-addon">
+                  <i class="fa fa-image"></i>
+                </div>
+                <input type="text" class="form-control" placeholder="Image tag.." [(ngModel)]="imgTag">
+              </div>
+            </div>
+          </div>
+          <!-- /.col -->
+          <div class="col-lg-6 col-md-6 col-xs-12">
+            <div class="form-group has-feedback">
+              <label>Image location</label>
+              <div class="input-group">
+                <div class="input-group-addon">
+                  <i class="fa fa-dot-circle-o"></i>
+                </div>
+                <input type="text" class="form-control" placeholder="Image location..." [(ngModel)]="imgLocation">
+              </div>
+            </div>
+          </div>
+          <!-- /.col -->
+        </div>
+      </div>
+      <!-- ./box-body -->
+      <div class="box-footer">
+        <button type="submit" class="btn btn-danger pull-left" (click)="clearFilter()">
+          <i class="fa fa-trash-o"></i> Clear</button>
+        <button type="submit" class="btn btn-primary pull-right" (click)="searchImages()">
+          <i class="fa fa-search"></i> Search</button>
+      </div>
+    </div>
+    <!-- /.box -->
+
+    <div *ngIf="(currentImages | async)?.length > 0" class="box box-success box-solid">
+      <div class="box-header with-border">
+        <h3 class="box-title">Imaged</h3>
+        <!-- {{productImage.name}} -->
+        <div class="box-tools pull-right">
+
+          <button type="button" class="btn btn-box-tool" data-widget="collapse">
+            <i class="fa fa-minus"></i>
+          </button>
+
+        </div>
+      </div>
+      <!-- /.box-header -->
+      <div class="box-body">
+        <div class="row">
+          <!-- /.col -->
+          <div class="col-md-12 col-lg-12 col-xs-12 col-sm-12">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+              <!-- Indicators -->
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner">
+                <div [ngClass]="{'item': true, 'active': idx === 0 }" *ngFor="let prdImg of currentImages | async; let idx = index " ng-class="active">
+                  <img src="{{prdImg?.url }}" alt="prdImg.name" style="width:100%;">
+                  <div class="carousel-caption">
+                    <h3>{{prdImg.location}}</h3>
+                    <p>{{prdImg.tags}}</p>
+                    <button type="submit" class="btn btn-danger" (click)="deleteImage(prdImg)">
+                      <i class="fa fa-trash-o"></i>
+                    </button>
+                  </div>
+
+                </div>
+              </div>
+              <!-- Left and right controls -->
+              <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+
+          </div>
+          <!-- /.col -->
+
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- ./box-body -->
+
+
+
+
+      <app-loading-spinner *ngIf="showSpinner"></app-loading-spinner>
+    </div>
+    <!-- <div *ngFor="let feature of features | async" class="row"> -->
+    <!-- <app-product-image-details></app-product-image-details> -->
+    <!-- </div> -->
 
   </section>
 </div>
