--- a/src/app/dashboard/products/product-details/product-details.component.html
+++ b/src/app/dashboard/products/product-details/product-details.component.html
@@ -20,7 +20,7 @@
         <!-- /.col -->
         <div class="col-md-8 col-lg-8 col-xs-12 col-sm-12">
 
-          <div class="box box-warning">
+          <div class="box box-success">
             <div class="box-header with-border">
               <h3 class="box-title">Product Description</h3>
 
@@ -39,7 +39,7 @@
           </div>
 
 
-          <div class="box box-warning">
+          <div class="box box-info">
             <div class="box-header with-border">
               <h3 class="box-title">Product Long Description</h3>
               <div class="box-tools pull-right">
