--- a/src/app/dashboard/products/product-form/product-form.component.css
+++ b/src/app/dashboard/products/product-form/product-form.component.css
@@ -105,3 +105,9 @@ $height: $width / 2;
         height: $height - 16px;
     }
 }
+
+.prod-image{
+    width: 60px;
+    height: 60px;
+    border: 1px solid red;
+}
