--- a/src/app/dashboard/products/product-details/product-details.component.html
+++ b/src/app/dashboard/products/product-details/product-details.component.html
@@ -44,7 +44,7 @@
               <h3 class="box-title">Product Long Description</h3>
               <div class="box-tools pull-right">
                 <button type="button" class="btn btn-box-tool" data-widget="collapse">
-                  <i class="fa fa-plus"></i>
+                  <i class="fa fa-minus"></i>
                 </button>
               </div>
               <!-- /.box-tools -->
