person for option added

--- a/src/app/dashboard/products/product-form/product-form.component.html
+++ b/src/app/dashboard/products/product-form/product-form.component.html
@@ -147,6 +147,7 @@
                     <i class="fa fa-dollar"></i>
                   </div>
                   <select class="form-control" [(ngModel)]="productDetails.currency" name="currency" #currency="ngModel">
+                    <option value="INR">INR</option>
                     <option value="USD">USD</option>
                     <option value="CAD">CAD</option>
                     <option value="MXN">MXN</option>
@@ -243,9 +244,8 @@
               </div>
             </div>
           </div>
-
           <div class="row">
-            <div class="col-lg-3 col-md-3 col-xs-12">
+            <div class="col-lg-6 col-md-6 col-xs-12">
               <div class="form-group has-feedback">
                 <label>Persons</label>
                 <!-- <input type="number" class="form-control" placeholder="Product name..." required minlength="4" maxlength="25" name="pname"
@@ -257,31 +257,38 @@
                     </div>
                     <div class="col-lg-9 col-md-9 col-xs-12" style="vertical-align: middle; padding-top:6px">
                       <input type="range" class="slider" [(ngModel)]="productDetails.pricefor" name="priceFor" #priceFor="ngModel" required min="1"
-                        max="20" step="1">
-                      <div *ngIf="priceFor.errors && (priceFor.dirty || priceFor.touched)" class="alert alert-danger">
-                        <div [hidden]="!priceFor.errors.required">
-                          name is required!
-                        </div>
-                        <div [hidden]="!priceFor.errors.min">
-                          number should be between 1 and 20
-                        </div>
-                        <div [hidden]="!priceFor.errors.max">
-                          number should be between 1 and 20
-                        </div>
-                      </div>
+                        max="20" step="1">                      
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-lg-3 col-md-3 col-xs-12">
+            <div class="col-lg-6 col-md-6 col-xs-12">
+              <div class="form-group has-feedback">
+                <label>Persons add option</label>           
+                <div class="input-group">
+                  <div class="row">
+                    <div class="col-lg-3 col-md-3 col-xs-12" >
+                      <code class="input-group-addon">{{productDetails.personAddOption}} </code>
+                    </div>
+                    <div class="col-lg-9 col-md-9 col-xs-12" style="vertical-align: middle; padding-top:6px">
+                      <input type="range" class="slider" [(ngModel)]="productDetails.personAddOption" name="perAddOpt" #perAddOpt="ngModel" required min="1"
+                        max="20" step="1">                     
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">            
+            <div class="col-lg-6 col-md-6 col-xs-12">
               <div class="switch-container">
                 <input type="checkbox" class="switch" name="isHot" [(ngModel)]="productDetails.isHot">
                 <label>is Hot</label>
               </div>
             </div>
 
-            <div class="col-lg-3 col-md-3 col-xs-12">
+            <div class="col-lg-6 col-md-6 col-xs-12">
               <div class="switch-container">
                 <input type="checkbox" class="switch" name="isActive" [(ngModel)]="productDetails.isActive">
                 <label>is Active</label>
