--- a/src/app/dashboard/app-banner-images/app-banner-image-form/app-banner-image-form.component.html
+++ b/src/app/dashboard/app-banner-images/app-banner-image-form/app-banner-image-form.component.html
@@ -11,7 +11,7 @@
 
     <div class="box box-warning">
       <div class="box-header with-border">
-        <h3 class="box-title">Product Image Details</h3>
+        <h3 class="box-title">Banner Image Details</h3>
       </div>
       <!-- /.box-header -->
       <div class="box-body">
@@ -19,44 +19,23 @@
           <div class="row">
             <div class="col-lg-6 col-md-6 col-xs-12">
               <div class="form-group has-feedback">
-                <label>Tags</label>
-                <input type="text" class="form-control" placeholder="Image tags..." required minlength="4" maxlength="100" name="imgTag"
-                  [(ngModel)]="currentImage.tags" #imgTag="ngModel"  data-toggle="tooltip" title="Use ',' (comma) to sperate the tags.">
-                <div *ngIf="imgTag.errors && (imgTag.dirty || imgTag.touched)" class="alert alert-danger">
-                  <div [hidden]="!imgTag.errors.required">
-                    tag(s) is required!
+                <label>Title</label>
+                <input type="text" class="form-control" placeholder="Title..." required minlength="5" maxlength="56" name="fstitle" [(ngModel)]="currentImage.title"
+                  #fstitle="ngModel">
+                <div *ngIf="fstitle.errors && (fstitle.dirty || fstitle.touched)" class="alert alert-danger">
+                  <div [hidden]="!fstitle.errors.required">
+                    title is required!
                   </div>
-                  <div [hidden]="!imgTag.errors.minlength">
-                    length should be between 4 to 100 charecters
+                  <div [hidden]="!fstitle.errors.minlength">
+                    length should be between 5 to 56 charecters
                   </div>
-                  <div [hidden]="!imgTag.errors.maxlength">
-                    length should be between 4 to 100 charecters
+                  <div [hidden]="!fstitle.errors.maxlength">
+                    length should be between 5 to 56 charecters
                   </div>
                 </div>
               </div>
             </div>
             <div class="col-lg-6 col-md-6 col-xs-12">
-              <div class="form-group has-feedback">
-                <label>Location</label>
-                <input type="text" class="form-control" placeholder="Location..." required minlength="5" maxlength="56" name="fsLocation"
-                  [(ngModel)]="currentImage.location" #fsLocation="ngModel">
-                <div *ngIf="fsLocation.errors && (fsLocation.dirty || fsLocation.touched)" class="alert alert-danger">
-                  <div [hidden]="!fsLocation.errors.required">
-                    location is required!
-                  </div>
-                  <div [hidden]="!fsLocation.errors.minlength">
-                    length should be between 25 to 56 charecters
-                  </div>
-                  <div [hidden]="!fsLocation.errors.maxlength">
-                    length should be between 25 to 56 charecters
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-lg-12 col-md-12 col-xs-12">
               <div class="form-group has-feedback">
                 <label>Select File</label>
                 <input type="file" class="form-control" placeholder="Select a file..." required (click)="setFileFlags()" (change)="onImageChangeFromFile($event)">
@@ -68,12 +47,9 @@
               </div>
             </div>
           </div>
-          <div class="row">
-            <br>
-          </div>
 
           <div class="row">
-            <div class="col-lg-6 col-md-6 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12">
               <!-- Progress bar -->
               <div *ngIf="showProgress" class="progress-group">
                 <span class="progress-text">Uploading Image</span>
@@ -99,23 +75,19 @@
                 Sorry, something went wrong while uploading your image..
               </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-xs-12">
-              <div class="row">
-                <div class="col-lg-6 col-md-6 col-xs-12">
-                  <button type="button" class="btn btn-block btn-danger btn-lg" (click)="back()">Cancel</button>
-                </div>
-                <!-- imageForm.invalid && -->
-                <div class="col-lg-6 col-md-6 col-xs-12">
-                  <button type="submit" [disabled]="!(imageForm.valid  && fileSelectedIsValid)" class="btn btn-block btn-primary btn-lg">
-                    <i class="fa fa-save"></i> Save</button>
-                </div>
-              </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-xs-12">
+              <button type="button" class="btn btn-danger pull-left" (click)="back()">Cancel</button>
+              <button type="submit" [disabled]="!(imageForm.valid  && fileSelectedIsValid)" class="btn btn-primary pull-right">
+                <i class="fa fa-save"></i> Save</button>
             </div>
           </div>
-
         </form>
       </div>
       <!-- /.box-body -->
+
+
     </div>
 
   </section>
