--- a/src/app/dashboard/features/feature-list/feature-list.component.html
+++ b/src/app/dashboard/features/feature-list/feature-list.component.html
@@ -1,19 +1,16 @@
 <div class="content-wrapper" style="min-height: 706px;">
   <!-- Content Header (Page header) -->
   <section class="content-header">
+    <h1 style="display: inline-flex">
+      Features
+    </h1>
 
-    <div class="box box-primary box-solid">
-      <div class="box-header with-border">
-        <h1 class="box-title">Features</h1>
-        <div class="box-tools pull-right">      
-          <button type="button" class="btn btn-social-icon btn-primary"(click)="addProduct()">
-            <i class="fa fa-plus-square"></i>
-          </button>         
-        </div>
-      </div>
+    <div class="box-tools pull-right">
+      <button type="button" class="btn btn-danger" (click)="addFeature()">
+        <i class="fa fa-plus-square"></i>
+      </button>
     </div>
   </section>
-
   <!-- Main content -->
   <section class="content">
     <div *ngFor="let feature of features | async" class="row">
