--- a/src/app/dashboard/products/product-details/product-details.component.html
+++ b/src/app/dashboard/products/product-details/product-details.component.html
@@ -1,11 +1,11 @@
 <div class="col-md-12 col-xs-12 col-lg-12">
-  <div class="box box-warning box-solid">
+  <div class="box  box-solid" [ngClass]="product.enabled ? 'box-success' : 'box-danger'">
     <div class="box-header with-border">
       <h3 class="box-title">{{product.name}}</h3>
 
       <div class="box-tools pull-right">
         <button type="button" class="btn btn-box-tool">
-          <i class="fa  fa-edit"(click)="editProduct()" ></i>
+          <i class="fa  fa-edit" (click)="editProduct()"></i>
         </button>
         <button type="button" class="btn btn-box-tool" data-widget="collapse">
           <i class="fa fa-minus"></i>
@@ -67,7 +67,7 @@
                 <td>{{ftr.shortDescription}}</td>
               </tr>
             </tbody>
-          </table>         
+          </table>
         </div>
       </div>
       <!-- /.row -->
