--- a/src/app/dashboard/products/product-list/product-list.component.html
+++ b/src/app/dashboard/products/product-list/product-list.component.html
@@ -1,16 +1,13 @@
 <div class="content-wrapper" style="min-height: 706px;">
-  <!-- Content Header (Page header) -->
   <section class="content-header">
+    <h1 style="display: inline-flex">
+      Products
+    </h1>
 
-    <div class="box box-primary box-solid">
-      <div class="box-header with-border">
-        <h1 class="box-title">Products</h1>
-        <div class="box-tools pull-right">      
-          <button type="button" class="btn btn-social-icon btn-primary"(click)="addProduct()">
-            <i class="fa fa-plus-square"></i>
-          </button>         
-        </div>
-      </div>
+    <div class="box-tools pull-right">
+      <button type="button" class="btn btn-danger" (click)="addProduct()">
+        <i class="fa fa-plus-square"></i>
+      </button>
     </div>
   </section>
 
